--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
     <link href="https://fonts.googleapis.com/css2?family=Crimson+Text:ital,wght@0,400;0,600;0,700;1,400;1,600;1,700&family=Hurricane&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Crimson+Text:ital,wght@0,400;0,600;0,700;1,400;1,600;1,700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@100..900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@300..700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&display=swap" rel="stylesheet">
     <!-- CSS -->
     <link rel="stylesheet" href="./output.css">
     <title>Tiara & Jalu</title>
@@ -200,7 +203,7 @@
                     <div class="quote-content w-full flex flex-col justify-center items-center">
                         <div class="quote-body w-full flex flex-col justify-center items-center">
                             <div class="relative w-full flex flex-col items-center gap-3">
-                                <span class="title font-bold opacity-0 font-great text-4xl md:text-6xl lg:text-4xl text-[var(--primary-color)]">Quote</span>
+                                <span class="title font-bold opacity-0 font-great text-4xl md:text-6xl lg:text-4xl text-[var(--primary-color)]">1. Endles Love</span>
                                 <div class="quote-containier w-[70%] h-75 relative z-1">
                                     <div class="flex flex-col gap-2 p-3 rounded-2xl bg-[var(--tertiary-color)]">
                                         <p class="description font-roboto opacity-0 text-sm md:text-2xl lg:text-sm text-center text-[var(--quaternary-color)]">
@@ -214,6 +217,111 @@
                                 <div class="w-ful flex justify-center">
                                     <img src="./assets/elements/orn-18-min.png" alt=""
                                         class="orn-18-quote absolute opacity-0 w-[45%] -top-38 md:-top-70 lg:-top-40">
+                                </div>
+                                <div class="orn-quote relative w-full z-0">
+                                    <div>
+                                        <img src="./assets/elements/orn-22-min.png" alt=""
+                                            class="orn-22-quote-left absolute opacity-0 w-[25%] left-2 -top-81 md:w-[15%] md:left-15 md:-top-90 lg:left-5 lg:-top-81">
+                                        <img src="./assets/elements/orn-3-min.png" alt=""
+                                            class="orn-3-quote-left absolute opacity-0 w-[20%] -rotate-15 left-5 -top-62 md:w-[15%] md:left-15 md:-top-70 lg:left-10 lg:-top-62">
+                                    </div>
+                                    <div>
+                                        <img src="./assets/elements/orn-22-min.png" alt=""
+                                            class="orn-22-quote-right absolute opacity-0 w-[25%] right-2 -top-81 md:w-[15%] md:right-15 md:-top-90 lg:right-5 lg:-top-81">
+                                        <img src="./assets/elements/orn-3-min.png" alt=""
+                                            class="orn-3-quote-right absolute opacity-0 transform scale-x-[-1] w-[20%] rotate-15 right-5 -top-62 md:w-[15%] md:right-15 md:-top-70 lg:right-10 lg:-top-62">
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </section>
+                
+                <!-- Quote -->
+                <section class="quote-wrap w-full flex flex-col justify-center items-center">
+                    <div class="quote-content w-full flex flex-col justify-center items-center">
+                        <div class="quote-body w-full flex flex-col justify-center items-center">
+                            <div class="relative w-full flex flex-col items-center gap-3">
+                                <span class="title font-bold opacity-0 font-great text-4xl md:text-6xl lg:text-4xl text-[var(--primary-color)]">2. Endles Love</span>
+                                <div class="quote-containier w-[70%] h-75 relative z-1">
+                                    <div class="flex flex-col gap-2 p-3 rounded-2xl bg-[var(--tertiary-color)]">
+                                        <p class="description font-comfortaa opacity-0 text-sm md:text-2xl lg:text-sm text-center text-[var(--quaternary-color)]">
+                                            “Semoga Allah rekatkan keberkahan padamu (di kala senang), dan semoga Allah rekatkan keberkahan kalian berdua (di kala susah), dan semoga Allah selalu menghimpun kalian berdua dalam kebaikan.”
+                                        </p>
+                                        <p class="detail font-comfortaa opacity-0 font-bold text-sm md:text-2xl lg:text-sm text-center text-[var(--quaternary-color)]">
+                                            (Doa Nabi Muhammad SAW saat pernikahan Fatimah Az-Zahra dengan Ali bin Abi Thalib)
+                                        </p>
+                                    </div>
+                                </div>
+                                <div class="orn-quote relative w-full z-0">
+                                    <div>
+                                        <img src="./assets/elements/orn-22-min.png" alt=""
+                                            class="orn-22-quote-left absolute opacity-0 w-[25%] left-2 -top-81 md:w-[15%] md:left-15 md:-top-90 lg:left-5 lg:-top-81">
+                                        <img src="./assets/elements/orn-3-min.png" alt=""
+                                            class="orn-3-quote-left absolute opacity-0 w-[20%] -rotate-15 left-5 -top-62 md:w-[15%] md:left-15 md:-top-70 lg:left-10 lg:-top-62">
+                                    </div>
+                                    <div>
+                                        <img src="./assets/elements/orn-22-min.png" alt=""
+                                            class="orn-22-quote-right absolute opacity-0 w-[25%] right-2 -top-81 md:w-[15%] md:right-15 md:-top-90 lg:right-5 lg:-top-81">
+                                        <img src="./assets/elements/orn-3-min.png" alt=""
+                                            class="orn-3-quote-right absolute opacity-0 transform scale-x-[-1] w-[20%] rotate-15 right-5 -top-62 md:w-[15%] md:right-15 md:-top-70 lg:right-10 lg:-top-62">
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </section>
+
+                <!-- Quote -->
+                <section class="quote-wrap w-full flex flex-col justify-center items-center">
+                    <div class="quote-content w-full flex flex-col justify-center items-center">
+                        <div class="quote-body w-full flex flex-col justify-center items-center">
+                            <div class="relative w-full flex flex-col items-center gap-3">
+                                <span class="title font-bold opacity-0 font-great text-4xl md:text-6xl lg:text-4xl text-[var(--primary-color)]">3. Endles Love</span>
+                                <div class="quote-containier w-[70%] h-75 relative z-1">
+                                    <div class="flex flex-col gap-2 p-3 rounded-2xl bg-[var(--tertiary-color)]">
+                                        <p class="description font-work-sans opacity-0 text-sm md:text-2xl lg:text-sm text-center text-[var(--quaternary-color)]">
+                                            “Semoga Allah rekatkan keberkahan padamu (di kala senang), dan semoga Allah rekatkan keberkahan kalian berdua (di kala susah), dan semoga Allah selalu menghimpun kalian berdua dalam kebaikan.”
+                                        </p>
+                                        <p class="detail font-work-sans opacity-0 font-bold text-sm md:text-2xl lg:text-sm text-center text-[var(--quaternary-color)]">
+                                            (Doa Nabi Muhammad SAW saat pernikahan Fatimah Az-Zahra dengan Ali bin Abi Thalib)
+                                        </p>
+                                    </div>
+                                </div>
+                                <div class="orn-quote relative w-full z-0">
+                                    <div>
+                                        <img src="./assets/elements/orn-22-min.png" alt=""
+                                            class="orn-22-quote-left absolute opacity-0 w-[25%] left-2 -top-81 md:w-[15%] md:left-15 md:-top-90 lg:left-5 lg:-top-81">
+                                        <img src="./assets/elements/orn-3-min.png" alt=""
+                                            class="orn-3-quote-left absolute opacity-0 w-[20%] -rotate-15 left-5 -top-62 md:w-[15%] md:left-15 md:-top-70 lg:left-10 lg:-top-62">
+                                    </div>
+                                    <div>
+                                        <img src="./assets/elements/orn-22-min.png" alt=""
+                                            class="orn-22-quote-right absolute opacity-0 w-[25%] right-2 -top-81 md:w-[15%] md:right-15 md:-top-90 lg:right-5 lg:-top-81">
+                                        <img src="./assets/elements/orn-3-min.png" alt=""
+                                            class="orn-3-quote-right absolute opacity-0 transform scale-x-[-1] w-[20%] rotate-15 right-5 -top-62 md:w-[15%] md:right-15 md:-top-70 lg:right-10 lg:-top-62">
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </section>
+
+                <!-- Quote -->
+                <section class="quote-wrap w-full flex flex-col justify-center items-center">
+                    <div class="quote-content w-full flex flex-col justify-center items-center">
+                        <div class="quote-body w-full flex flex-col justify-center items-center">
+                            <div class="relative w-full flex flex-col items-center gap-3">
+                                <span class="title font-bold opacity-0 font-great text-4xl md:text-6xl lg:text-4xl text-[var(--primary-color)]">4. Endles Love</span>
+                                <div class="quote-containier w-[70%] h-75 relative z-1">
+                                    <div class="flex flex-col gap-2 p-3 rounded-2xl bg-[var(--tertiary-color)]">
+                                        <p class="description font-quicksand opacity-0 text-sm md:text-2xl lg:text-sm text-center text-[var(--quaternary-color)]">
+                                            “Semoga Allah rekatkan keberkahan padamu (di kala senang), dan semoga Allah rekatkan keberkahan kalian berdua (di kala susah), dan semoga Allah selalu menghimpun kalian berdua dalam kebaikan.”
+                                        </p>
+                                        <p class="detail font-quicksand opacity-0 font-bold text-sm md:text-2xl lg:text-sm text-center text-[var(--quaternary-color)]">
+                                            (Doa Nabi Muhammad SAW saat pernikahan Fatimah Az-Zahra dengan Ali bin Abi Thalib)
+                                        </p>
+                                    </div>
                                 </div>
                                 <div class="orn-quote relative w-full z-0">
                                     <div>
@@ -590,38 +698,23 @@
                 </section>
 
                 <!-- Galery -->
-                <section class="relative countdown-wrap w-full flex flex-col gap-5 justify-center items-center p-4">
+                <section class="relative countdown-wrap w-full flex flex-col gap-5 justify-center items-center p-2">
                     <span class="title opacity-0 font-great font-bold text-4xl md:text-6xl lg:text-4xl text-[var(--primary-color)]">Our Galery</span>
-                    <div class="p-8 bg-cover bg-center rounded" style="background-image: linear-gradient(var(--tertiary-color-transparant2), var(--tertiary-color-transparant2)), url('./assets/mempelai/m-5.jpg');">
-                        <div class="grid grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-4">
-                            <div class="relative overflow-hidden rounded-lg shadow-md cursor-pointer transition-transform duration-300 hover:scale-105">
-                                <img src="./assets/mempelai/m-1.jpg" alt="Wedding Photo 1" data-index="0" class="w-full h-40 object-cover block">
-                            </div>
-                            <div class="relative overflow-hidden rounded-lg shadow-md cursor-pointer transition-transform duration-300 hover:scale-105">
-                                <img src="./assets/mempelai/m-2.jpg" alt="Wedding Photo 2" data-index="1" class="w-full h-40 object-cover block">
-                            </div>
-                            <div class="relative overflow-hidden rounded-lg shadow-md cursor-pointer transition-transform duration-300 hover:scale-105">
-                                <img src="./assets/mempelai/m-3.jpg" alt="Wedding Photo 3" data-index="2" class="w-full h-40 object-cover block">
-                            </div>
-                            <div class="relative overflow-hidden rounded-lg shadow-md cursor-pointer transition-transform duration-300 hover:scale-105">
-                                <img src="./assets/mempelai/m-4.jpg" alt="Wedding Photo 4" data-index="3" class="w-full h-40 object-cover block">
-                            </div>
-                            <div class="relative overflow-hidden rounded-lg shadow-md cursor-pointer transition-transform duration-300 hover:scale-105">
-                                <img src="./assets/mempelai/m-5.jpg" alt="Wedding Photo 5" data-index="4" class="w-full h-40 object-cover block">
-                            </div>
-                            <div class="relative overflow-hidden rounded-lg shadow-md cursor-pointer transition-transform duration-300 hover:scale-105">
-                                <img src="./assets/mempelai/m-6.jpg" alt="Wedding Photo 6" data-index="5" class="w-full h-40 object-cover block">
-                            </div>
-                            <div class="relative overflow-hidden rounded-lg shadow-md cursor-pointer transition-transform duration-300 hover:scale-105">
-                                <img src="./assets/mempelai/m-7.jpg" alt="Wedding Photo 7" data-index="6" class="w-full h-40 object-cover block">
-                            </div>
-                            <div class="relative overflow-hidden rounded-lg shadow-md cursor-pointer transition-transform duration-300 hover:scale-105">
-                                <img src="./assets/mempelai/m-8.jpg" alt="Wedding Photo 8" data-index="7" class="w-full h-40 object-cover block">
-                            </div>
-                            <div class="col-span-full flex justify-center items-center w-full">
-                                <span class="font-roboto text-xl md:text-3xl lg:text-xl text-[var(--quaternary-color)]">#ToJoyTillJannah</span>
-                            </div>
+                    <div class="pt-2 pb-8 px-2 bg-cover bg-center rounded" style="background-image: linear-gradient(var(--tertiary-color-transparant2), var(--tertiary-color-transparant2)), url('./assets/mempelai/m-1.jpeg');">
+                        <div class="flex flex-wrap gap-2">
+                            <img src="./assets/mempelai/m-1.jpeg" alt="Wedding Photo 1" data-index="0" class="w-full h-full object-cover block rounded-md">
+                            <img src="./assets/mempelai/m-2.jpeg" alt="Wedding Photo 2" data-index="1" class="w-full h-full object-cover block rounded-md">
+                            <img src="./assets/mempelai/m-3.jpeg" alt="Wedding Photo 3" data-index="2" class="w-full h-full object-cover block rounded-md">
+                            <img src="./assets/mempelai/m-4.jpeg" alt="Wedding Photo 4" data-index="3" class="w-full h-full object-cover block rounded-md">
+                            <div class="flex gap-2">
+                                <img src="./assets/mempelai/m-6.jpeg" alt="Wedding Photo 6" data-index="5" class="w-1/2 object-cover block">
+                                <img src="./assets/mempelai/m-5.jpeg" alt="Wedding Photo 5" data-index="4" class="w-1/2 object-cover block rounded-md">
+                            </div>                            
                         </div>
+                        <div class="col-span-full mt-5 flex justify-center items-center w-full">
+                            <span class="font-roboto text-xl md:text-3xl lg:text-xl text-[var(--quaternary-color)]">#ToJoyTillJannah</span>
+                        </div>
+                    </div>
                 </section>
             </section>
             <div id="trigger-for-background" class="relative w-full z-9999">
